--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="zh">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@taylorgy</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>@taylorgy</title>
 </head>
 
 <body>
-    <div name="SG0">
-        <script src=".js/script_SG0.js"></script>
-        <summary class="title"> [fiction]STEINS;GATE 0 (updating) </summary>
-        <ul class="menu" name="menuSG0">
-            <li> <a href="./steins_gate_0/docs/0000"> Prologue </a> </li>
-        </ul>
-    </div>
+  <div name="SG0">
+    <script src=".js/script_SG0.js"></script>
+    <details class="title">
+      <summary> [fiction]STEINS;GATE 0 (updating) </summary>
+      <ul class="menu" name="menuSG0">
+        <li> <a href="./steins_gate_0/docs/0000"> Prologue </a> </li>
+      </ul>
+    </details>
+
+    
+  </div>
 </body>
 
 </html>
