--- a/article/sg0/index.html
+++ b/article/sg0/index.html
@@ -1,109 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>STEINS;GATE_0</title>
 </head>
+
 <body>
   <details>
     <summary> [fiction]STEINS;GATE 0 (updating) </summary>
-      <ul>
-        <li> <a href="./doc/0000"> Prologue </a> </li>
-        <li> <a href="./doc/0001"> 0001 - R0 </a> </li>
-        <li> <a href="./doc/0002"> 0002 - R0 </a> </li>
-        <li> <a href="./doc/0003"> 0003 - R0 </a> </li>
-        <li> <a href="./doc/0004"> 0004 - R0 </a> </li>
-        <li> <a href="./doc/0005"> 0005 - R0 </a> </li>
-        <li> <a href="./doc/0006"> 0006 - R0 </a> </li>
-        <li> <a href="./doc/0007"> 0007 - R0 </a> </li>
-        <li> <a href="./doc/0008"> 0008 - R0 </a> </li>
-        <li> <a href="./doc/0009"> 0009 - R0 </a> </li>
-        <li> <a href="./doc/0010"> 0010 - R0 </a> </li>
-        <li> <a href="./doc/0011"> 0011 - R0 </a> </li>
-        <li> <a href="./doc/0012"> 0012 - R0 </a> </li>
-        <li> <a href="./doc/0013"> 0013 - R0 </a> </li>
-        <li> <a href="./doc/0014"> 0014 - R0 </a> </li>
-        <li> <a href="./doc/0015"> 0015 - R0 </a> </li>
-        <li> <a href="./doc/0016"> 0016 - R0 </a> </li>
-        <li> <a href="./doc/0017"> 0017 - R0 </a> </li>
-        <li> <a href="./doc/0018"> 0018 - R0 </a> </li>
-        <li> <a href="./doc/0019"> 0019 - R0 </a> </li>
-        <li> <a href="./doc/0020"> 0020 - R0 </a> </li>
-        <li> <a href="./doc/0021"> 0021 - R0 </a> </li>
-        <li> <a href="./doc/0022"> 0022 - R0 </a> </li>
-        <li> <a href="./doc/0023"> 0023 - R0 </a> </li>
-        <li> <a href="./doc/0024"> 0024 - R0 </a> </li>
-        <li> <a href="./doc/0025"> 0025 - R0 </a> </li>
-        <li> <a href="./doc/0026"> 0026 - R0 </a> </li>
-        <li> <a href="./doc/0027"> 0027 - R0 </a> </li>
-        <li> <a href="./doc/0028"> 0028 - R0 </a> </li>
-        <li> <a href="./doc/0029"> 0029 - R0 </a> </li>
-        <li> <a href="./doc/0030"> 0030 - R0 </a> </li>
-        <li> <a href="./doc/0031"> 0031 - R0 </a> </li>
-        <li> <a href="./doc/0032"> 0032 - R0 </a> </li>
-        <li> <a href="./doc/0033"> 0033 - R0 </a> </li>
-        <li> <a href="./doc/0034"> 0034 - R0 </a> </li>
-        <li> <a href="./doc/0035"> 0035 - R0 </a> </li>
-        <li> <a href="./doc/0036"> 0036 - R1 </a> </li>
-        <li> <a href="./doc/0037"> 0037 - R1 </a> </li>
-        <li> <a href="./doc/0038"> 0038 - R1 </a> </li>
-        <li> <a href="./doc/0039"> 0039 - R1 </a> </li>
-        <li> <a href="./doc/0040"> 0040 - R1 </a> </li>
-        <li> <a href="./doc/0041"> 0041 - R1 </a> </li>
-        <li> <a href="./doc/0042"> 0042 - R1 </a> </li>
-        <li> <a href="./doc/0043"> 0043 - R1 </a> </li>
-        <li> <a href="./doc/0044"> 0044 - R1 </a> </li>
-        <li> <a href="./doc/0045"> 0045 - R1 </a> </li>
-        <li> <a href="./doc/0046"> 0046 - R1 </a> </li>
-        <li> <a href="./doc/0047"> 0047 - R1 </a> </li>
-        <li> <a href="./doc/0048"> 0048 - R1 </a> </li>
-        <li> <a href="./doc/0049"> 0049 - Valkyrie's Final Report_BE </a> </li>
-        <li> <a href="./doc/0050"> 0050 - R2 </a> </li>
-        <li> <a href="./doc/0051"> 0051 - R2 </a> </li>
-        <li> <a href="./doc/0052"> 0052 - R2 </a> </li>
-        <li> <a href="./doc/0053"> 0053 - R2 </a> </li>
-        <li> <a href="./doc/0054"> 0054 - R2 </a> </li>
-        <li> <a href="./doc/0055"> 0055 - R2 </a> </li>
-        <li> <a href="./doc/0056"> 0056 - R2 </a> </li>
-        <li> <a href="./doc/0057"> 0057 - R2 </a> </li>
-        <li> <a href="./doc/0058"> 0058 - R2 </a> </li>
-        <li> <a href="./doc/0059"> 0059 - R2 </a> </li>
-        <li> <a href="./doc/0060"> 0060 - R2 </a> </li>
-        <li> <a href="./doc/0061"> 0061 - R2 </a> </li>
-        <li> <a href="./doc/0062"> 0062 - R2 </a> </li>
-        <li> <a href="./doc/0063"> 0063 - R2 </a> </li>
-        <li> <a href="./doc/0064"> 0064 - R2 </a> </li>
-        <li> <a href="./doc/0065"> 0065 - R2 </a> </li>
-        <li> <a href="./doc/0066"> 0066 - R2 </a> </li>
-        <li> <a href="./doc/0067"> 0067 - R2 </a> </li>
-        <li> <a href="./doc/0068"> 0068 - R2 </a> </li>
-        <li> <a href="./doc/0069"> 0069 - R2 </a> </li>
-        <li> <a href="./doc/0070"> 0070 - R2 </a> </li>
-        <li> <a href="./doc/0071"> 0071 - R2 </a> </li>
-        <li> <a href="./doc/0072"> 0072 - R2 </a> </li>
-        <li> <a href="./doc/0073"> 0073 - R2 </a> </li>
-        <li> <a href="./doc/0074"> 0074 - R3 </a> </li>
-        <li> <a href="./doc/0075"> 0075 - R3 </a> </li>
-        <li> <a href="./doc/0076"> 0076 - R3 </a> </li>
-        <li> <a href="./doc/0077"> 0077 - R3 </a> </li>
-        <li> <a href="./doc/0078"> 0078 - R3 </a> </li>
-        <li> <a href="./doc/0079"> 0079 - R3 </a> </li>
-        <li> <a href="./doc/0080"> 0080 - R3 </a> </li>
-        <li> <a href="./doc/0081"> 0081 - R3 </a> </li>
-        <li> <a href="./doc/0082"> 0082 - R3 </a> </li>
-        <li> <a href="./doc/0083"> 0083 - R3 </a> </li>
-        <li> <a href="./doc/0084"> 0084 - R3 </a> </li>
-        <li> <a href="./doc/0085"> 0085 - R3 </a> </li>
-        <li> <a href="./doc/0086"> 0086 - R3 </a> </li>
-        <li> <a href="./doc/0087"> 0087 - R3 </a> </li>
-        <li> <a href="./doc/0088"> 0088 - R3 </a> </li>
-        <li> <a href="./doc/0089"> 0089 - R3 </a> </li>
-        <li> <a href="./doc/0090"> 0090 - R3 </a> </li>
-      </ul>
-    </details>
-    
-</body>
-</html>
+    <ul>
+      <li> <a href="./doc/0000"> 序章 </a> </li>
+      <li> <a href="./doc/0001"> 零化域的缺失之环 - 01 </a> </li>
+      <li> <a href="./doc/0002"> 零化域的缺失之环 - 02 </a> </li>
+      <li> <a href="./doc/0003"> 零化域的缺失之环 - 03 </a> </li>
+      <li> <a href="./doc/0004"> 零化域的缺失之环 - 04 </a> </li>
+      <li> <a href="./doc/0005"> 零化域的缺失之环 - 05 </a> </li>
+      <li> <a href="./doc/0006"> 闭时曲线的碑文 - 01 </a> </li>
+      <li> <a href="./doc/0007"> 闭时曲线的碑文 - 02 </a> </li>
+      <li> <a href="./doc/0008"> 闭时曲线的碑文 - 03 </a> </li>
+      <li> <a href="./doc/0009"> 闭时曲线的碑文 - 04 </a> </li>
+      <li> <a href="./doc/0010"> 闭时曲线的碑文 - 05 </a> </li>
+      <li> <a href="./doc/0011"> 闭时曲线的碑文 - 06 </a> </li>
+      <li> <a href="./doc/0012"> 闭时曲线的碑文 - 07 </a> </li>
+      <li> <a href="./doc/0013"> 闭时曲线的碑文 - 08 </a> </li>
+      <li> <a href="./doc/0014"> 闭时曲线的碑文 - 09 </a> </li>
+      <li> <a href="./doc/0015"> 闭时曲线的碑文 - 10 </a> </li>
+      <li> <a href="./doc/0016"> 闭时曲线的碑文 - 11 </a> </li>
+      <li> <a href="./doc/0017"> 闭时曲线的碑文 - 12 </a> </li>
+      <li> <a href="./doc/0018"> 闭时曲线的碑文 - 13α </a> </li>
+      <li> <a href="./doc/0019"> 双体福音的契约 - 01 </a> </li>
+      <li> <a href="./doc/0020"> 双体福音的契约 - 02 </a> </li>
+      <li> <a href="./doc/0021"> 双体福音的契约 - 03 </a> </li>
+      <li> <a href="./doc/0022"> 双体福音的契约 - 04 </a> </li>
+      <li> <a href="./doc/0023"> 双体福音的契约 - 05 </a> </li>
+      <li> <a href="./doc/0024"> 双体福音的契约 - 06 </a> </li>
+      <li> <a href="./doc/0025"> 双体福音的契约 - 07 </a> </li>
+      <li> <a href="./doc/0026"> 双体福音的契约 - 08 </a> </li>
+      <li> <a href="./doc/0027"> 双体福音的契约 - 09 </a> </li>
+      <li> <a href="./doc/0028"> 永劫回归的潘多拉 - 01 </a> </li>
+      <li> <a href="./doc/0029"> 永劫回归的潘多拉 - 02 </a> </li>
+      <li> <a href="./doc/0030"> 永劫回归的潘多拉 - 03 </a> </li>
+      <li> <a href="./doc/0031"> 永劫回归的潘多拉 - 04 </a> </li>
+      <li> <a href="./doc/0032"> 永劫回归的潘多拉 - 05 </a> </li>
+      <li> <a href="./doc/0033"> 永劫回归的潘多拉 - 06 </a> </li>
+      <li> <a href="./doc/0034"> 永劫回归的潘多拉 - 07 </a> </li>
+      <li> <a href="./doc/0035"> 永劫回归的潘多拉 - 08 </a> </li>
+      <li> <a href="./doc/0036"> 永劫回归的潘多拉 - 09α </a> </li>
+      <li> <a href="./doc/0037"> 私秘境里的圣痕 - 01 </a> </li>
+      <li> <a href="./doc/0038"> 私秘境里的圣痕 - 02 </a> </li>
+      <li> <a href="./doc/0039"> 私秘境里的圣痕 - 03 </a> </li>
+      <li> <a href="./doc/0040"> 私秘境里的圣痕 - 04 </a> </li>
+      <li> <a href="./doc/0041"> 私秘境里的圣痕 - 05 </a> </li>
+      <li> <a href="./doc/0042"> 私秘境里的圣痕 - 06 </a> </li>
+      <li> <a href="./doc/0043"> 私秘境里的圣痕 - 07 </a> </li>
+      <li> <a href="./doc/0044"> 私秘境里的圣痕 - 08 </a> </li>
+      <li> <a href="./doc/0045"> 私秘境里的圣痕 - 09 </a> </li>
+      <li> <a href="./doc/0046"> 私秘境里的圣痕 - 10 </a> </li>
+      <li> <a href="./doc/0047"> 私秘境里的圣痕 - 11 </a> </li>
+      <li> <a href="./doc/0048"> 私秘境里的圣痕 - 12（冈伦结局） </a> </li>
+      <li> <a href="./doc/0049"> 瓦尔基里最终报告 - 01 </a> </li>
+      <li> <a href="./doc/0050"> 闭时曲线的碑文 - 13β </a> </li>
+      <li> <a href="./doc/0051"> 亡失流转的寂寥 - 01 </a> </li>
+      <li> <a href="./doc/0052"> 亡失流转的寂寥 - 02 </a> </li>
+      <li> <a href="./doc/0053"> 亡失流转的寂寥 - 03 </a> </li>
+      <li> <a href="./doc/0054"> 亡失流转的寂寥 - 04 </a> </li>
+      <li> <a href="./doc/0055"> 亡失流转的寂寥 - 05 </a> </li>
+      <li> <a href="./doc/0056"> 亡失流转的寂寥 - 06 </a> </li>
+      <li> <a href="./doc/0057"> 亡失流转的寂寥 - 07 </a> </li>
+      <li> <a href="./doc/0058"> 亡失流转的寂寥 - 08 </a> </li>
+      <li> <a href="./doc/0059"> 亡失流转的寂寥 - 09 </a> </li>
+      <li> <a href="./doc/0060"> 亡失流转的寂寥 - 10 </a> </li>
+      <li> <a href="./doc/0061"> 亡失流转的寂寥 - 11 </a> </li>
+      <li> <a href="./doc/0062"> 亡失流转的寂寥 - 12 </a> </li>
+      <li> <a href="./doc/0063"> 轨道秩序的日蚀 - 01 </a> </li>
+      <li> <a href="./doc/0064"> 轨道秩序的日蚀 - 02 </a> </li>
+      <li> <a href="./doc/0065"> 轨道秩序的日蚀 - 03 </a> </li>
+      <li> <a href="./doc/0066"> 轨道秩序的日蚀 - 04 </a> </li>
+      <li> <a href="./doc/0067"> 轨道秩序的日蚀 - 05 </a> </li>
+      <li> <a href="./doc/0068"> 轨道秩序的日蚀 - 06 </a> </li>
+      <li> <a href="./doc/0069"> 轨道秩序的日蚀 - 07 </a> </li>
+      <li> <a href="./doc/0070"> 轨道秩序的日蚀 - 08 </a> </li>
+      <li> <a href="./doc/0071"> 轨道秩序的日蚀 - 09 </a> </li>
+      <li> <a href="./doc/0072"> 轨道秩序的日蚀 - 10 </a> </li>
+      <li> <a href="./doc/0073"> 轨道秩序的日蚀 - 11 </a> </li>
+      <li> <a href="./doc/0074"> 存在证明的自动机械 - 00 </a> </li>
+      <li> <a href="./doc/0075"> 存在证明的自动机械 - 01 </a> </li>
+      <li> <a href="./doc/0076"> 存在证明的自动机械 - 02 </a> </li>
+      <li> <a href="./doc/0077"> 存在证明的自动机械 - 03 </a> </li>
+      <li> <a href="./doc/0078"> 存在证明的自动机械 - 04 </a> </li>
+      <li> <a href="./doc/0079"> 存在证明的自动机械 - 05 </a> </li>
+      <li> <a href="./doc/0080"> 存在证明的自动机械 - 06 </a> </li>
+      <li> <a href="./doc/0081"> 存在证明的自动机械 - 07 </a> </li>
+      <li> <a href="./doc/0082"> 存在证明的自动机械 - 08 </a> </li>
+      <li> <a href="./doc/0083"> 存在证明的自动机械 - 09 </a> </li>
+      <li> <a href="./doc/0084"> 存在证明的自动机械 - 10 </a> </li>
+      <li> <a href="./doc/0085"> 存在证明的自动机械 - 11 </a> </li>
+      <li> <a href="./doc/0086"> 存在证明的自动机械 - 12 </a> </li>
+      <li> <a href="./doc/0087"> 存在证明的自动机械 - 13 </a> </li>
+      <li> <a href="./doc/0088"> 存在证明的自动机械 - 14 </a> </li>
+      <li> <a href="./doc/0089"> 存在证明的自动机械 - 15 </a> </li>
+      <li> <a href="./doc/0090"> 存在证明的自动机械 - 16 </a> </li>
+      <li> <a href="./doc/0091"> 存在证明的自动机械 - 17 </a> </li>
+      <li> <a href="./doc/0092"> 存在证明的自动机械 - 18（真帆结局） </a> </li>
+      <li> <a href="./doc/0093"> 瓦尔基里最终报告 - 02 </a> </li>
+    </ul>
+  </details>
 
+</body>
+
+</html>
