--- a/article/sg0/index.html
+++ b/article/sg0/index.html
@@ -5,19 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>STEINS;GATE_0</title>
-  <link rel="import" href="./static/script/menu.html" id="menu">
+  <title>STEINS;GATE-0</title>
+
+  <link rel="stylesheet" href="https://raw.githack.com/taylorgy/package-css/main/reset.css">
+  <link rel="stylesheet" href="https://raw.githack.com/taylorgy/package-css/main/normalize.css">
+  <link rel="stylesheet" href="https://raw.githack.com/taylorgy/package-css/main/clearfix.css">
+  <link rel="stylesheet" href="./static/css/main.css">
+
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <script src="./static/js/main.js"></script>
+
 </head>
 
 <body>
-  <details>
-    <summary> [fiction]STEINS;GATE 0 (updating) </summary>
-    <ul>
-      <script type="text/javascript">
-        document.write(menu.import.body.innerHTML);
-      </script>
-    </ul>
-  </details>
+
+  <h1>STEINS;GATE 0 (updating)</h1>
+  <ul class="menu"> </ul>
+
 
 </body>
 
