--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -92,3 +92,13 @@
 <li> <a href="./doc/0091"> 存在证明的自动机械 - 17 </a> </li>
 <li> <a href="./doc/0092"> 存在证明的自动机械 - 18（真帆结局） </a> </li>
 <li> <a href="./doc/0093"> 瓦尔基里最终报告 - 02 </a> </li>
+<li> <a href="./doc/0094"> 二律背反的双模 - 01 </a> </li>
+<li> <a href="./doc/0095"> 二律背反的双模 - 02 </a> </li>
+<li> <a href="./doc/0096"> 二律背反的双模 - 03 </a> </li>
+<li> <a href="./doc/0097"> 二律背反的双模 - 04 </a> </li>
+<li> <a href="./doc/0098"> 二律背反的双模 - 05 </a> </li>
+<li> <a href="./doc/0099"> 二律背反的双模 - 06 </a> </li>
+<li> <a href="./doc/0100"> 二律背反的双模 - 07 </a> </li>
+<li> <a href="./doc/0101"> 二律背反的双模 - 08 </a> </li>
+<li> <a href="./doc/0102"> 二律背反的双模 - 09 </a> </li>
+<li> <a href="./doc/0103"> 二律背反的双模 - 10 </a> </li>
