--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TG's HomePage</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TG's Cyberspace</title>
 </head>
 
 <body>
-    <h2>article</h2>
-    <li><a href="./article/sg0/">Steins;Gate 0</a></li>
-    <h2>game</h2>
-    <li><a href="./game/breathedge/">Breathedge</a></li>
-    <li><a href="./game/hrm/">Human Resource Machine</a></li>
-    
-    
+  <h2>article</h2>
+  <li><a href="./article/sg0/">Steins;Gate 0</a></li>
+  <h2>game</h2>
+  <li><a href="./game/hrm/">Human Resource Machine</a></li>
+
+
 </body>
+
 </html>
