--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -106,3 +106,7 @@
 <li> <a href="./doc/0105">二律背反的双模 - 12</a> </li>
 <li> <a href="./doc/0106">二律背反的双模 - 13</a> </li>
 <li> <a href="./doc/0107">二律背反的双模 - 14</a> </li>
+<li> <a href="./doc/0108">二律背反的双模 - 15</a> </li>
+<li> <a href="./doc/0109">二律背反的双模 - 16</a> </li>
+<li> <a href="./doc/0110">二律背反的双模 - 17</a> </li>
+<li> <a href="./doc/0111">二律背反的双模 - 18</a> </li>
