--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -110,3 +110,6 @@
 <li> <a href="./doc/0109">二律背反的双模 - 16</a> </li>
 <li> <a href="./doc/0110">二律背反的双模 - 17</a> </li>
 <li> <a href="./doc/0111">二律背反的双模 - 18</a> </li>
+<li> <a href="./doc/0112">二律背反的双模 - 19</a> </li>
+<li> <a href="./doc/0113">相互再归的鹅妈妈 - 01</a> </li>
+<li> <a href="./doc/0114">相互再归的鹅妈妈 - 02</a> </li>
