--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -113,3 +113,9 @@
 <li> <a href="./doc/0112">二律背反的双模 - 19</a> </li>
 <li> <a href="./doc/0113">相互再归的鹅妈妈 - 01</a> </li>
 <li> <a href="./doc/0114">相互再归的鹅妈妈 - 02</a> </li>
+<li> <a href="./doc/0115">相互再归的鹅妈妈 - 03</a> </li>
+<li> <a href="./doc/0116">相互再归的鹅妈妈 - 04</a> </li>
+<li> <a href="./doc/0117">相互再归的鹅妈妈 - 05</a> </li>
+<li> <a href="./doc/0118">相互再归的鹅妈妈 - 06</a> </li>
+<li> <a href="./doc/0119">相互再归的鹅妈妈 - 07</a> </li>
+<li> <a href="./doc/0120">相互再归的鹅妈妈 - 08</a> </li>
