update Valkyrie Final Reports and menu

--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -46,8 +46,8 @@
 <li> <a href="./doc/0045">私秘境里的圣痕 - 09</a> </li>
 <li> <a href="./doc/0046">私秘境里的圣痕 - 10</a> </li>
 <li> <a href="./doc/0047">私秘境里的圣痕 - 11</a> </li>
-<li> <a href="./doc/0048">私秘境里的圣痕 - 12（冈伦结局）</a> </li>
-<li> <a href="./doc/0049">瓦尔基里最终报告 - 01</a> </li>
+<li> <a href="./doc/0048">私秘境里的圣痕 - 12</a> </li>
+<li> <a href="./doc/0049">瓦尔基里最终报告 - 冈伦结局</a> </li>
 <li> <a href="./doc/0050">闭时曲线的碑文 - 13β</a> </li>
 <li> <a href="./doc/0051">亡失流转的寂寥 - 01</a> </li>
 <li> <a href="./doc/0052">亡失流转的寂寥 - 02</a> </li>
@@ -90,8 +90,8 @@
 <li> <a href="./doc/0089">存在证明的自动机械 - 15</a> </li>
 <li> <a href="./doc/0090">存在证明的自动机械 - 16</a> </li>
 <li> <a href="./doc/0091">存在证明的自动机械 - 17</a> </li>
-<li> <a href="./doc/0092">存在证明的自动机械 - 18（真帆结局）</a> </li>
-<li> <a href="./doc/0093">瓦尔基里最终报告 - 02</a> </li>
+<li> <a href="./doc/0092">存在证明的自动机械 - 18</a> </li>
+<li> <a href="./doc/0093">瓦尔基里最终报告 - 真帆结局</a> </li>
 <li> <a href="./doc/0094">二律背反的双模 - 01</a> </li>
 <li> <a href="./doc/0095">二律背反的双模 - 02</a> </li>
 <li> <a href="./doc/0096">二律背反的双模 - 03</a> </li>
@@ -119,3 +119,5 @@
 <li> <a href="./doc/0118">相互再归的鹅妈妈 - 06</a> </li>
 <li> <a href="./doc/0119">相互再归的鹅妈妈 - 07</a> </li>
 <li> <a href="./doc/0120">相互再归的鹅妈妈 - 08</a> </li>
+<li> <a href="./doc/0121">相互再归的鹅妈妈 - 09</a> </li>
+<li> <a href="./doc/0122">瓦尔基里最终报告 - 篝结局</a> </li>
