--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -121,3 +121,11 @@
 <li> <a href="./doc/0120">相互再归的鹅妈妈 - 08</a> </li>
 <li> <a href="./doc/0121">相互再归的鹅妈妈 - 09</a> </li>
 <li> <a href="./doc/0122">瓦尔基里最终报告 - 篝结局</a> </li>
+<li> <a href="./doc/0123">盟誓的文艺复兴 - 01</a> </li>
+<li> <a href="./doc/0124">盟誓的文艺复兴 - 02</a> </li>
+<li> <a href="./doc/0125">盟誓的文艺复兴 - 03</a> </li>
+<li> <a href="./doc/0126">盟誓的文艺复兴 - 04</a> </li>
+<li> <a href="./doc/0127">盟誓的文艺复兴 - 05</a> </li>
+<li> <a href="./doc/0128">盟誓的文艺复兴 - 06</a> </li>
+<li> <a href="./doc/0129">盟誓的文艺复兴 - 07</a> </li>
+<li> <a href="./doc/0130">盟誓的文艺复兴 - 08</a> </li>
