update index page

--- a/article/sg0/index.html
+++ b/article/sg0/index.html
@@ -1,27 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>STEINS;GATE-0</title>
+  <title>Steins;Gate 0 Fiction</title>
+  <link rel="icon" type="image/png" href="favicon.png">
 
-  <link rel="stylesheet" href="https://raw.githack.com/taylorgy/package-css/main/reset.css">
-  <link rel="stylesheet" href="https://raw.githack.com/taylorgy/package-css/main/normalize.css">
-  <link rel="stylesheet" href="https://raw.githack.com/taylorgy/package-css/main/clearfix.css">
+  <link rel="stylesheet"
+    href="https://raw.githack.com/taylorgy/lib-css/main/preset.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=ZCOOL+QingKe+HuangYou&display=swap">
   <link rel="stylesheet" href="./static/css/main.css">
 
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+    integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+    crossorigin="anonymous"></script>
   <script src="./static/js/main.js"></script>
 
 </head>
 
 <body>
+  <div class="header">
+    <div class="title">
+      <!-- <span id="name">命运石之门Steins;Gate</span>
+      <span id="season">0</span> -->
+      <a href="./">
+        <img class="logo" src="./static/image/element/logo-white.png"
+          alt="Steins;Gate 0 Logo">
+      </a>
+    </div>
 
-  <h1>STEINS;GATE 0 (updating)</h1>
+    <ul class="clearlist">
+      <li id="btn-all">
+        <span>全部路线</span>
+        <img class="route" src="./static/image/element/clearlist-tube.png" alt="全部路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+      </li>
+      <li id="btn-Kyoju">
+        <span>教授路线</span>
+        <img class="route" src="./static/image/element/clearlist-kyoju.png" alt="教授路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+        <img class="mask2" src="./static/image/element/clearlist-mask-kyoju.png"
+          alt="mask2">
+      </li>
+      <li id="btn-Maho">
+        <span>真帆路线</span>
+        <img class="route" src="./static/image/element/clearlist-maho.png" alt="真帆路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+        <img class="mask2" src="./static/image/element/clearlist-mask-maho.png"
+          alt="mask2">
+      </li>
+      <li id="btn-Kagari">
+        <span>篝路线</span>
+        <img class="route" src="./static/image/element/clearlist-kagari.png" alt="篝路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+        <img class="mask2" src="./static/image/element/clearlist-mask-kagari.png"
+          alt="mask2">
+      </li>
+      <li id="btn-Kurisu">
+        <span>红莉栖路线</span>
+        <img class="route" src="./static/image/element/clearlist-kurisu.png" alt="红莉栖路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+        <img class="mask2" src="./static/image/element/clearlist-mask-kurisu.png"
+          alt="mask2">
+      </li>
+      <li id="btn-Mayuri">
+        <span>真由理路线</span>
+        <img class="route" src="./static/image/element/clearlist-mayuri.png" alt="真由理路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+        <img class="mask2" src="./static/image/element/clearlist-mask-mayuri.png"
+          alt="mask2">
+      </li>
+      <li id="btn-Kyoma">
+        <span>凶真路线</span>
+        <img class="route" src="./static/image/element/clearlist-kyoma.png" alt="凶真路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+        <img class="mask2" src="./static/image/element/clearlist-mask-kyoma.png"
+          alt="mask2">
+      </li>
+    </ul>
+  </div>
+
   <ul class="menu"> </ul>
-
 
 </body>
 
