--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -47,7 +47,7 @@
 <li class="ed-Kyoju"> <a href="./doc/0046">私秘境里的污点 - 10</a> </li>
 <li class="ed-Kyoju"> <a href="./doc/0047">私秘境里的污点 - 11</a> </li>
 <li class="ed-Kyoju"> <a href="./doc/0048">私秘境里的污点 - 12</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0049">瓦尔基里最终报告 - 教授结局</a> </li>
+<li class="ed-Kyoju"> <a href="./doc/0049">瓦尔基里报告 - 教授结局</a> </li>
 <li class="p3"> <a href="./doc/0050">闭时曲线的碑文 - 13β</a> </li>
 <li class="p3"> <a href="./doc/0051">亡失流转的寂寥 - 01</a> </li>
 <li class="p3"> <a href="./doc/0052">亡失流转的寂寥 - 02</a> </li>
@@ -91,7 +91,7 @@
 <li class="ed-Maho"> <a href="./doc/0090">存在证明的自动机械 - 16</a> </li>
 <li class="ed-Maho"> <a href="./doc/0091">存在证明的自动机械 - 17</a> </li>
 <li class="ed-Maho"> <a href="./doc/0092">存在证明的自动机械 - 18</a> </li>
-<li class="ed-Maho"> <a href="./doc/0093">瓦尔基里最终报告 - 真帆结局</a> </li>
+<li class="ed-Maho"> <a href="./doc/0093">瓦尔基里报告 - 真帆结局</a> </li>
 <li class="p4"> <a href="./doc/0094">二律背反的双模 - 01</a> </li>
 <li class="p4"> <a href="./doc/0095">二律背反的双模 - 02</a> </li>
 <li class="p4"> <a href="./doc/0096">二律背反的双模 - 03</a> </li>
@@ -120,7 +120,7 @@
 <li class="ed-Kagari"> <a href="./doc/0119">相互回归的鹅妈妈 - 07</a> </li>
 <li class="ed-Kagari"> <a href="./doc/0120">相互回归的鹅妈妈 - 08</a> </li>
 <li class="ed-Kagari"> <a href="./doc/0121">相互回归的鹅妈妈 - 09</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0122">瓦尔基里最终报告 - 篝结局</a> </li>
+<li class="ed-Kagari"> <a href="./doc/0122">瓦尔基里报告 - 篝结局</a> </li>
 <li class="ed-Kurisu"> <a href="./doc/0123">盟誓的文艺复兴 - 01</a> </li>
 <li class="ed-Kurisu"> <a href="./doc/0124">盟誓的文艺复兴 - 02</a> </li>
 <li class="ed-Kurisu"> <a href="./doc/0125">盟誓的文艺复兴 - 03</a> </li>
