--- a/article/sg0/index.html
+++ b/article/sg0/index.html
@@ -20,65 +20,74 @@
     integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
     crossorigin="anonymous"></script>
   <script src="./static/js/main.js"></script>
-
 </head>
 
 <body>
   <div class="header">
-    <div class="title">
-      <!-- <span id="name">命运石之门Steins;Gate</span>
-      <span id="season">0</span> -->
-      <a href="./">
-        <img class="logo" src="./static/image/element/logo-white.png"
-          alt="Steins;Gate 0 Logo">
-      </a>
-    </div>
+    <a href="./">
+      <img class="logo" src="./static/image/element/logo-white.png"
+        alt="Steins;Gate 0 Logo">
+    </a>
 
     <ul class="clearlist">
       <li id="btn-all">
         <span>全部路线</span>
-        <img class="route" src="./static/image/element/clearlist-tube.png" alt="全部路线">
-        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+        <img class="route" src="./static/image/element/clearlist-tube.png"
+          alt="全部路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png"
+          alt="mask1">
       </li>
       <li id="btn-Kyoju">
         <span>教授路线</span>
-        <img class="route" src="./static/image/element/clearlist-kyoju.png" alt="教授路线">
-        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+        <img class="route" src="./static/image/element/clearlist-kyoju.png"
+          alt="教授路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png"
+          alt="mask1">
         <img class="mask2" src="./static/image/element/clearlist-mask-kyoju.png"
           alt="mask2">
       </li>
       <li id="btn-Maho">
         <span>真帆路线</span>
-        <img class="route" src="./static/image/element/clearlist-maho.png" alt="真帆路线">
-        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+        <img class="route" src="./static/image/element/clearlist-maho.png"
+          alt="真帆路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png"
+          alt="mask1">
         <img class="mask2" src="./static/image/element/clearlist-mask-maho.png"
           alt="mask2">
       </li>
       <li id="btn-Kagari">
         <span>篝路线</span>
-        <img class="route" src="./static/image/element/clearlist-kagari.png" alt="篝路线">
-        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
-        <img class="mask2" src="./static/image/element/clearlist-mask-kagari.png"
-          alt="mask2">
+        <img class="route" src="./static/image/element/clearlist-kagari.png"
+          alt="篝路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png"
+          alt="mask1">
+        <img class="mask2"
+          src="./static/image/element/clearlist-mask-kagari.png" alt="mask2">
       </li>
       <li id="btn-Kurisu">
         <span>红莉栖路线</span>
-        <img class="route" src="./static/image/element/clearlist-kurisu.png" alt="红莉栖路线">
-        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
-        <img class="mask2" src="./static/image/element/clearlist-mask-kurisu.png"
-          alt="mask2">
+        <img class="route" src="./static/image/element/clearlist-kurisu.png"
+          alt="红莉栖路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png"
+          alt="mask1">
+        <img class="mask2"
+          src="./static/image/element/clearlist-mask-kurisu.png" alt="mask2">
       </li>
       <li id="btn-Mayuri">
         <span>真由理路线</span>
-        <img class="route" src="./static/image/element/clearlist-mayuri.png" alt="真由理路线">
-        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
-        <img class="mask2" src="./static/image/element/clearlist-mask-mayuri.png"
-          alt="mask2">
+        <img class="route" src="./static/image/element/clearlist-mayuri.png"
+          alt="真由理路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png"
+          alt="mask1">
+        <img class="mask2"
+          src="./static/image/element/clearlist-mask-mayuri.png" alt="mask2">
       </li>
       <li id="btn-Kyoma">
         <span>凶真路线</span>
-        <img class="route" src="./static/image/element/clearlist-kyoma.png" alt="凶真路线">
-        <img class="mask1" src="./static/image/element/clearlist-mask.png" alt="mask1">
+        <img class="route" src="./static/image/element/clearlist-kyoma.png"
+          alt="凶真路线">
+        <img class="mask1" src="./static/image/element/clearlist-mask.png"
+          alt="mask1">
         <img class="mask2" src="./static/image/element/clearlist-mask-kyoma.png"
           alt="mask2">
       </li>
