--- a/article/sg0/index.html
+++ b/article/sg0/index.html
@@ -16,15 +16,14 @@
     href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=ZCOOL+QingKe+HuangYou&display=swap">
   <link rel="stylesheet" href="./static/css/main.css">
 
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"
-    integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="./static/js/main.js"></script>
 </head>
 
 <body>
   <div class="header">
-    <a href="./">
+    <a href="">
       <img class="logo" src="./static/image/element/logo-white.png"
         alt="Steins;Gate 0 Logo">
     </a>
@@ -32,60 +31,53 @@
     <ul class="clearlist">
       <li id="btn-all">
         <span>全部路线</span>
-        <img class="route" src="./static/image/element/clearlist-tube.png"
-          alt="全部路线">
-        <img class="mask1" src="./static/image/element/clearlist-mask.png"
-          alt="mask1">
+        <img src="./static/image/element/clearlist-tube.png" alt="全部路线">
+        <img class="mask1 active"
+          src="./static/image/element/clearlist-mask.png" alt="mask1">
       </li>
-      <li id="btn-Kyoju">
+      <li id="btn-kyoju">
         <span>教授路线</span>
-        <img class="route" src="./static/image/element/clearlist-kyoju.png"
-          alt="教授路线">
+        <img src="./static/image/element/clearlist-kyoju.png" alt="教授路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
         <img class="mask2" src="./static/image/element/clearlist-mask-kyoju.png"
           alt="mask2">
       </li>
-      <li id="btn-Maho">
+      <li id="btn-maho">
         <span>真帆路线</span>
-        <img class="route" src="./static/image/element/clearlist-maho.png"
-          alt="真帆路线">
+        <img src="./static/image/element/clearlist-maho.png" alt="真帆路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
         <img class="mask2" src="./static/image/element/clearlist-mask-maho.png"
           alt="mask2">
       </li>
-      <li id="btn-Kagari">
+      <li id="btn-kagari">
         <span>篝路线</span>
-        <img class="route" src="./static/image/element/clearlist-kagari.png"
-          alt="篝路线">
+        <img src="./static/image/element/clearlist-kagari.png" alt="篝路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
         <img class="mask2"
           src="./static/image/element/clearlist-mask-kagari.png" alt="mask2">
       </li>
-      <li id="btn-Kurisu">
+      <li id="btn-kurisu">
         <span>红莉栖路线</span>
-        <img class="route" src="./static/image/element/clearlist-kurisu.png"
-          alt="红莉栖路线">
+        <img src="./static/image/element/clearlist-kurisu.png" alt="红莉栖路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
         <img class="mask2"
           src="./static/image/element/clearlist-mask-kurisu.png" alt="mask2">
       </li>
-      <li id="btn-Mayuri">
+      <li id="btn-mayuri">
         <span>真由理路线</span>
-        <img class="route" src="./static/image/element/clearlist-mayuri.png"
-          alt="真由理路线">
+        <img src="./static/image/element/clearlist-mayuri.png" alt="真由理路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
         <img class="mask2"
           src="./static/image/element/clearlist-mask-mayuri.png" alt="mask2">
       </li>
-      <li id="btn-Kyoma">
+      <li id="btn-kyoma">
         <span>凶真路线</span>
-        <img class="route" src="./static/image/element/clearlist-kyoma.png"
-          alt="凶真路线">
+        <img src="./static/image/element/clearlist-kyoma.png" alt="凶真路线">
         <img class="mask1" src="./static/image/element/clearlist-mask.png"
           alt="mask1">
         <img class="mask2" src="./static/image/element/clearlist-mask-kyoma.png"
@@ -94,7 +86,8 @@
     </ul>
   </div>
 
-  <ul class="menu"> </ul>
+  <ul class="menu"></ul>
+  <ol class="page-index"></ol>
 
 </body>
 
