--- a/article/sg0/static/script/menu.html
+++ b/article/sg0/static/script/menu.html
@@ -34,20 +34,20 @@
 <li class="p2"> <a href="./doc/0033">永劫回归的潘多拉 - 06</a> </li>
 <li class="p2"> <a href="./doc/0034">永劫回归的潘多拉 - 07</a> </li>
 <li class="p2"> <a href="./doc/0035">永劫回归的潘多拉 - 08</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0036">永劫回归的潘多拉 - 09α</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0037">私秘境里的污点 - 01</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0038">私秘境里的污点 - 02</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0039">私秘境里的污点 - 03</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0040">私秘境里的污点 - 04</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0041">私秘境里的污点 - 05</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0042">私秘境里的污点 - 06</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0043">私秘境里的污点 - 07</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0044">私秘境里的污点 - 08</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0045">私秘境里的污点 - 09</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0046">私秘境里的污点 - 10</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0047">私秘境里的污点 - 11</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0048">私秘境里的污点 - 12</a> </li>
-<li class="ed-Kyoju"> <a href="./doc/0049">瓦尔基里报告 - 教授结局</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0036">永劫回归的潘多拉 - 09α</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0037">私秘境里的污点 - 01</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0038">私秘境里的污点 - 02</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0039">私秘境里的污点 - 03</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0040">私秘境里的污点 - 04</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0041">私秘境里的污点 - 05</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0042">私秘境里的污点 - 06</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0043">私秘境里的污点 - 07</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0044">私秘境里的污点 - 08</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0045">私秘境里的污点 - 09</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0046">私秘境里的污点 - 10</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0047">私秘境里的污点 - 11</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0048">私秘境里的污点 - 12</a> </li>
+<li class="ed-kyoju"> <a href="./doc/0049">瓦尔基里报告 - 教授结局</a> </li>
 <li class="p3"> <a href="./doc/0050">闭时曲线的碑文 - 13β</a> </li>
 <li class="p3"> <a href="./doc/0051">亡失流转的寂寥 - 01</a> </li>
 <li class="p3"> <a href="./doc/0052">亡失流转的寂寥 - 02</a> </li>
@@ -72,26 +72,26 @@
 <li class="p3"> <a href="./doc/0071">轨道秩序的日蚀 - 09</a> </li>
 <li class="p3"> <a href="./doc/0072">轨道秩序的日蚀 - 10</a> </li>
 <li class="p3"> <a href="./doc/0073">轨道秩序的日蚀 - 11</a> </li>
-<li class="ed-Maho"> <a href="./doc/0074">存在证明的自动机械 - 00</a> </li>
-<li class="ed-Maho"> <a href="./doc/0075">存在证明的自动机械 - 01</a> </li>
-<li class="ed-Maho"> <a href="./doc/0076">存在证明的自动机械 - 02</a> </li>
-<li class="ed-Maho"> <a href="./doc/0077">存在证明的自动机械 - 03</a> </li>
-<li class="ed-Maho"> <a href="./doc/0078">存在证明的自动机械 - 04</a> </li>
-<li class="ed-Maho"> <a href="./doc/0079">存在证明的自动机械 - 05</a> </li>
-<li class="ed-Maho"> <a href="./doc/0080">存在证明的自动机械 - 06</a> </li>
-<li class="ed-Maho"> <a href="./doc/0081">存在证明的自动机械 - 07</a> </li>
-<li class="ed-Maho"> <a href="./doc/0082">存在证明的自动机械 - 08</a> </li>
-<li class="ed-Maho"> <a href="./doc/0083">存在证明的自动机械 - 09</a> </li>
-<li class="ed-Maho"> <a href="./doc/0084">存在证明的自动机械 - 10</a> </li>
-<li class="ed-Maho"> <a href="./doc/0085">存在证明的自动机械 - 11</a> </li>
-<li class="ed-Maho"> <a href="./doc/0086">存在证明的自动机械 - 12</a> </li>
-<li class="ed-Maho"> <a href="./doc/0087">存在证明的自动机械 - 13</a> </li>
-<li class="ed-Maho"> <a href="./doc/0088">存在证明的自动机械 - 14</a> </li>
-<li class="ed-Maho"> <a href="./doc/0089">存在证明的自动机械 - 15</a> </li>
-<li class="ed-Maho"> <a href="./doc/0090">存在证明的自动机械 - 16</a> </li>
-<li class="ed-Maho"> <a href="./doc/0091">存在证明的自动机械 - 17</a> </li>
-<li class="ed-Maho"> <a href="./doc/0092">存在证明的自动机械 - 18</a> </li>
-<li class="ed-Maho"> <a href="./doc/0093">瓦尔基里报告 - 真帆结局</a> </li>
+<li class="ed-maho"> <a href="./doc/0074">存在证明的自动机械 - 00</a> </li>
+<li class="ed-maho"> <a href="./doc/0075">存在证明的自动机械 - 01</a> </li>
+<li class="ed-maho"> <a href="./doc/0076">存在证明的自动机械 - 02</a> </li>
+<li class="ed-maho"> <a href="./doc/0077">存在证明的自动机械 - 03</a> </li>
+<li class="ed-maho"> <a href="./doc/0078">存在证明的自动机械 - 04</a> </li>
+<li class="ed-maho"> <a href="./doc/0079">存在证明的自动机械 - 05</a> </li>
+<li class="ed-maho"> <a href="./doc/0080">存在证明的自动机械 - 06</a> </li>
+<li class="ed-maho"> <a href="./doc/0081">存在证明的自动机械 - 07</a> </li>
+<li class="ed-maho"> <a href="./doc/0082">存在证明的自动机械 - 08</a> </li>
+<li class="ed-maho"> <a href="./doc/0083">存在证明的自动机械 - 09</a> </li>
+<li class="ed-maho"> <a href="./doc/0084">存在证明的自动机械 - 10</a> </li>
+<li class="ed-maho"> <a href="./doc/0085">存在证明的自动机械 - 11</a> </li>
+<li class="ed-maho"> <a href="./doc/0086">存在证明的自动机械 - 12</a> </li>
+<li class="ed-maho"> <a href="./doc/0087">存在证明的自动机械 - 13</a> </li>
+<li class="ed-maho"> <a href="./doc/0088">存在证明的自动机械 - 14</a> </li>
+<li class="ed-maho"> <a href="./doc/0089">存在证明的自动机械 - 15</a> </li>
+<li class="ed-maho"> <a href="./doc/0090">存在证明的自动机械 - 16</a> </li>
+<li class="ed-maho"> <a href="./doc/0091">存在证明的自动机械 - 17</a> </li>
+<li class="ed-maho"> <a href="./doc/0092">存在证明的自动机械 - 18</a> </li>
+<li class="ed-maho"> <a href="./doc/0093">瓦尔基里报告 - 真帆结局</a> </li>
 <li class="p4"> <a href="./doc/0094">二律背反的双模 - 01</a> </li>
 <li class="p4"> <a href="./doc/0095">二律背反的双模 - 02</a> </li>
 <li class="p4"> <a href="./doc/0096">二律背反的双模 - 03</a> </li>
@@ -111,21 +111,21 @@
 <li class="p4"> <a href="./doc/0110">二律背反的双模 - 17</a> </li>
 <li class="p4"> <a href="./doc/0111">二律背反的双模 - 18</a> </li>
 <li class="p4"> <a href="./doc/0112">二律背反的双模 - 19</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0113">相互回归的鹅妈妈 - 01</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0114">相互回归的鹅妈妈 - 02</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0115">相互回归的鹅妈妈 - 03</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0116">相互回归的鹅妈妈 - 04</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0117">相互回归的鹅妈妈 - 05</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0118">相互回归的鹅妈妈 - 06</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0119">相互回归的鹅妈妈 - 07</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0120">相互回归的鹅妈妈 - 08</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0121">相互回归的鹅妈妈 - 09</a> </li>
-<li class="ed-Kagari"> <a href="./doc/0122">瓦尔基里报告 - 篝结局</a> </li>
-<li class="ed-Kurisu"> <a href="./doc/0123">盟誓的文艺复兴 - 01</a> </li>
-<li class="ed-Kurisu"> <a href="./doc/0124">盟誓的文艺复兴 - 02</a> </li>
-<li class="ed-Kurisu"> <a href="./doc/0125">盟誓的文艺复兴 - 03</a> </li>
-<li class="ed-Kurisu"> <a href="./doc/0126">盟誓的文艺复兴 - 04</a> </li>
-<li class="ed-Kurisu"> <a href="./doc/0127">盟誓的文艺复兴 - 05</a> </li>
-<li class="ed-Kurisu"> <a href="./doc/0128">盟誓的文艺复兴 - 06</a> </li>
-<li class="ed-Kurisu"> <a href="./doc/0129">盟誓的文艺复兴 - 07</a> </li>
-<li class="ed-Kurisu"> <a href="./doc/0130">盟誓的文艺复兴 - 08</a> </li>
+<li class="ed-kagari"> <a href="./doc/0113">相互回归的鹅妈妈 - 01</a> </li>
+<li class="ed-kagari"> <a href="./doc/0114">相互回归的鹅妈妈 - 02</a> </li>
+<li class="ed-kagari"> <a href="./doc/0115">相互回归的鹅妈妈 - 03</a> </li>
+<li class="ed-kagari"> <a href="./doc/0116">相互回归的鹅妈妈 - 04</a> </li>
+<li class="ed-kagari"> <a href="./doc/0117">相互回归的鹅妈妈 - 05</a> </li>
+<li class="ed-kagari"> <a href="./doc/0118">相互回归的鹅妈妈 - 06</a> </li>
+<li class="ed-kagari"> <a href="./doc/0119">相互回归的鹅妈妈 - 07</a> </li>
+<li class="ed-kagari"> <a href="./doc/0120">相互回归的鹅妈妈 - 08</a> </li>
+<li class="ed-kagari"> <a href="./doc/0121">相互回归的鹅妈妈 - 09</a> </li>
+<li class="ed-kagari"> <a href="./doc/0122">瓦尔基里报告 - 篝结局</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0123">盟誓的文艺复兴 - 01</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0124">盟誓的文艺复兴 - 02</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0125">盟誓的文艺复兴 - 03</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0126">盟誓的文艺复兴 - 04</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0127">盟誓的文艺复兴 - 05</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0128">盟誓的文艺复兴 - 06</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0129">盟誓的文艺复兴 - 07</a> </li>
+<li class="ed-kurisu"> <a href="./doc/0130">盟誓的文艺复兴 - 08</a> </li>
