--- a/article/sg0/index.html
+++ b/article/sg0/index.html
@@ -23,9 +23,8 @@
 
 <body>
   <div class="header">
-    <a href="">
-      <img class="logo" src="./static/image/element/logo-white.png"
-        alt="Steins;Gate 0 Logo">
+    <a class="logo" href="">
+      <img src="./static/image/element/logo-white.png" alt="Steins;Gate 0 Logo">
     </a>
 
     <ul class="clearlist">
@@ -86,8 +85,8 @@
     </ul>
   </div>
 
-  <ul class="menu"></ul>
   <ol class="page-index"></ol>
+  <ul class="menu"></ul>
 
 </body>
 
